# ArchipelagoGD2

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
src/: APUtils.cpp  APUtils.hpp  AchievementBarHook.cpp  ConnectPopup.cpp  ConnectPopup.h  GJBaseGameLayerHook.cpp  GJGameBaseLayerHook.cpp  GJShopLayerHook.cpp  GManagerHook.cpp  GameStatsManagerHook.cpp  LevelAreaInnerLayerHook.cpp  LevelSelectLayerHook.cpp  LoadingLayerHook.cpp  PlayLayerHook.cpp  PortalLogic.cpp  main.cpp
src/shopHooks/: GJItemIconHook.cpp  GJShopLayerHook.cpp  GameStatsManagerHook.cpp  PurchaseItemPopupHook.cpp
